--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,9 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/e-shop
-spring.datasource.username=wp
-spring.datasource.password=wp123
+spring.datasource.url=jdbc:postgresql://localhost:5432/wp-labs
+spring.datasource.username=wp-labs
+spring.datasource.password=wp-labs123
 
-
-## default connection pool
+# default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
