--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -2,10 +2,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
